--- a/table.html
+++ b/table.html
@@ -10,7 +10,7 @@
    
     <nav class="nav">
         <div class="header-right">
-          <a class="active" href="about.html">Home</a>
+          <a class="active" href="index.html">Home</a>
           <a href="media.html">Media</a>
           <a href="table.html">Courses</a>
         </div>
