--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
     <section id="contact">
         <h2>Contact Me</h2>
-        <p>Email: <a href="mailto:your-email@example.com">toluwalaseolfinjana@gmail.com</a></p>
+        <p>Email: <a href="mailto:your-email@example.com">toluwalaseolofinjana@gmail.com</a></p>
 
         <div class="social-links">
             <a href="https://twitter.com/yourprofile" target="_blank">Twitter</a>
@@ -95,7 +95,7 @@
     <a class="backtotop" href="#">Back to Top</a>
 
     <footer>
-      <p>&copy; 2024 Your Name. All rights reserved.</p>
+      <p>&copy; 2024 Toluwalase Olofinjana. All rights reserved.</p>
     </footer>
   </body>
 </html>
